# pyimgproxy

./: .bumpversion.toml  .coveragerc  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
pyimgproxy/: __init__.py  exceptions.py  image.py  imgproxy.py
requirements/: local.txt  testing.txt
tests/: test_image.py  test_imgproxy.py
